@@ -236,26 +236,30 @@ namespace mesmer
     // Methods for generating values of shifted Legendre polynomials.
     typedef double (*slp)(const double &x) ;
     map<size_t, slp> m_slpMap ;
-    double ShiftedLegendre(size_t order, const double x) {double f = m_slpMap[order](x) ; 
-    return f ; } ;
+    double ShiftedLegendre(size_t order, const double x) {
+      double f = m_slpMap[order](x) ; 
+      return f ; 
+    } ;
 
     // This method generates the column header for the output tables.
     string columnHeader() const ;
 
     const char* m_id;
 
-    size_t m_nVar ;                // Dimension of analysis - number of inputs.
-    size_t m_nOut ;                // Dimension of analysis - number of outputs.
+    size_t m_nVar ;                 // Dimension of analysis - number of inputs.
+    size_t m_nOut ;                 // Dimension of analysis - number of outputs.
 
     size_t m_maxIterations ;
     bool   m_bGenerateData ;
 
     vector<double> m_delta ;
 
-    size_t m_order ;               // The order of the HDMR analysis to use.
+    size_t m_order ;                // The order of the HDMR analysis to use.
 
     vector<vector<double> > m_Di ;  // First order sensitivities.
     vector<vector<double> > m_Dij ; // Second order sensitivities.
+
+    vector<double> m_RSquared ;     // R^2 statistic.
 
   };
 
@@ -449,14 +453,17 @@ namespace mesmer
       vector<double> f0, f02, varf ;
       vector<double> alpha, beta ;
       vector<string> rxnId ;
+      vector<vector<double> > locationData(m_maxIterations,vector<double>(m_nVar,0.0)) ;
+      vector<vector<double> > outputData ;
       bool f0Initialized(false) ;
 
       // Loop over perturbed parameter values.
 
       double nrmlFctr(1.0/double(m_maxIterations)) ;
-      for (size_t itr(1) ; itr <= m_maxIterations ; itr++) {
+      for (size_t itr(0) ; itr < m_maxIterations ; itr++) {
         vector<double> rndmd(m_nVar,0.0) ;
         sobol.sobol(m_nVar, &seed, rndmd) ;
+        locationData[itr] = rndmd ;
 
         // Use random vector generated by sobol method to perturb parameter values.
 
@@ -474,7 +481,9 @@ namespace mesmer
           m_nOut = phenRates.size() ;
           f0.resize(m_nOut, 0.0) ;
           f02.resize(m_nOut, 0.0) ;
+          m_RSquared.resize(m_nOut, 0.0) ;
           varf.resize(m_nOut, 0.0) ;
+          outputData.resize(m_maxIterations, vector<double>(m_nOut, 0.0)) ;
           alpha.resize(m_nOut*m_nVar*m_order, 0.0) ;
           beta.resize(m_nOut*m_nVar*m_nVar*m_order*m_order, 0.0) ;
           map<string, double>::const_iterator irxn = phenRates.begin();
@@ -489,6 +498,7 @@ namespace mesmer
         for (size_t nOut(0), ida(0), idb(0) ; irxn != phenRates.end() ; irxn++, nOut++) {
 
           double output = irxn->second ;
+          outputData[itr][nOut] = output ;
           f0[nOut]  += output ;
           f02[nOut] += output*output ;
 
@@ -505,7 +515,7 @@ namespace mesmer
 
             // beta coefficients.
 
-            for (size_t j(0) ; j < rndmd.size() ; j++) {
+            for (size_t j(0) ; j < i ; j++) {
               double input_j = rndmd[j] ;
               for (size_t k(1) ; k <= m_order ; k++) {
                 for (size_t l(1) ; l <= m_order ; l++, idb++) {
@@ -527,10 +537,55 @@ namespace mesmer
         beta[i] *= nrmlFctr ;
 
       // Calculate the variance of the outputs.
+
       for (size_t i(0) ; i < f0.size() ; i++) {
-        f0[i]  *= nrmlFctr ;
-        f02[i] *= nrmlFctr ;
-        varf[i] = f02[i] - f0[i]*f0[i] ;
+        f0[i]   *= nrmlFctr ;
+        f02[i]  *= nrmlFctr ;
+        varf[i]  = f02[i] - f0[i]*f0[i] ;
+      }
+
+	  // Calculate the R^2 statistic. 
+
+      vector<double> sumOfRes(m_nOut, 0.0) ;
+      for (size_t itr(0) ; itr < m_maxIterations ; itr++) {
+		vector<double> rndmd = locationData[itr] ;
+
+        for (size_t nOut(0), ida(0), idb(0) ; nOut < f0.size() ; nOut++) {
+          double output = outputData[itr][nOut] ;
+
+          // Calculate fitted value.
+
+          double sum(f0[nOut]) ;
+
+          for (size_t i(0) ; i < m_nVar ; i++) {
+
+            // alpha coefficients.
+
+            double input_i = rndmd[i] ;
+            for (size_t k(1) ; k <= m_order ; k++, ida++) {
+              sum += alpha[ida]*ShiftedLegendre(k, input_i) ;
+            }
+
+            // beta coefficients.
+
+            for (size_t j(0) ; j < i ; j++) {
+              double input_j = rndmd[j] ;
+              for (size_t k(1) ; k <= m_order ; k++) {
+                for (size_t l(1) ; l <= m_order ; l++, idb++) {
+                  sum += beta[idb] * ShiftedLegendre(k, input_i) * ShiftedLegendre(l, input_j) ; 
+                }
+              }
+            }
+          }
+
+          double residue = output - sum ;
+          sumOfRes[nOut] += residue*residue ;
+        }
+      }
+
+      for (size_t i(0) ; i < f0.size() ; i++) {
+        sumOfRes[i]  *= nrmlFctr ;
+        m_RSquared[i] = 1.0 - (sumOfRes[i]/varf[i]) ;
       }
 
       sensitivityIndicies(varf, alpha, beta) ;
@@ -559,7 +614,7 @@ namespace mesmer
 
         // Second order indicies.
         vector<double> tmb ;
-        for (size_t j(0) ; j < m_nVar ; j++) {
+        for (size_t j(0) ; j < i ; j++) {
           double smb(0.0) ;
           for (size_t k(1) ; k <= m_order ; k++) {
             for (size_t l(1) ; l <= m_order ; l++, idb++) {
@@ -619,6 +674,7 @@ namespace mesmer
         cinfo << endl;
       }
       cinfo << endl;
+      cinfo << "R-Squared statistic: " << m_RSquared[i] << endl ;
     }
     cinfo << endl;
 
