@@ -1,3 +1,9 @@
+2015-February-28 Struan Robertson
+
+	* UnitTest.cpp: Fix for test break (roll back of 17-Feb-2015 change).
+
+	* SensitivityAnalysis.cpp: R-squared statistic added.
+	
 2015-February-27 Struan Robertson
 
 	* System.cpp: Fix for Chebyshev test break.
